--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
     <p id="rgb-color">(168, 34, 1)</p>
 
+    <h2 id="answer">Escolha uma cor</h2>
+
     <section id="guess-colors">
         <div class="ball"></div>
         <div class="ball"></div>
