--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
         <div class="ball"></div>
     </section>
 
+    <div class="botao">
+        <button id="reset-game">Resetar Jogo / Cores</button>
+    </div>
+
     <script src="/script.js"></script>
 </body>
 </html>
