--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 
     <p id="rgb-color">(168, 34, 1)</p>
 
+    <span>
+        <input id="score" type="number" value="0">
+    </span>
+
     <h2 id="answer">Escolha uma cor</h2>
 
     <section id="guess-colors">
