--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <p id="rgb-color">(168, 34, 1)</p>
 
     <span>
-        <input id="score" type="number" value="0">
+        <p>Placar:</p>
+        <p id="score">0</p>
     </span>
 
     <h2 id="answer">Escolha uma cor</h2>
