--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="ball"></div>
   </section>
   <section id="main-msg">
-    <span id="answer">Escolha uma cor:</span>
+    <span id="answer">Escolha uma cor</span>
   </section>
   <section id="btns">
     <button id="dificuldade">Mudar-dificuldade</button>
