ajustando geracao de cores

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
     <h1 id="title">Adivinha Cor</h1>
   </header>
-  <h2 id="rgb-color">(252, 78, 145)</h2>
+  <h2 id="rgb-color"></h2>
   <ul id="paleta-de-cores">
 
   </ul>
