--- a/index.html
+++ b/index.html
@@ -9,5 +9,12 @@
 <body>
   <h1 id="title">Adivinhe a COR</h1>
   <h2 id="rbg-color">(168, 34, 1)</h2>
+  <div class="ball"></div>
+  <div class="ball"></div>
+  <div class="ball"></div>
+  <div class="ball"></div>
+  <div class="ball"></div>
+  <div class="ball"></div>
+  <script src="script.js"></script>
 </body>
 </html>
