--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
     <h1 id="title">Adivinha Cor</h1>
   </header>
   <h2 id="rgb-color"></h2>
-  <ul id="paleta-de-cores">
-
-  </ul>
-
+  <ul id="paleta-de-cores"></ul>
+  <h2 id="resultado">Escolha uma cor</h2>
 
 
   <script src="script.js"></script>
