tentando arrumar o exercicio 5

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </header>
   <h2 id="rgb-color"></h2>
   <ul id="paleta-de-cores"></ul>
-  <h2 id="resultado">Escolha uma cor</h2>
+  <p id="resultado">Escolha uma cor</p>
 
 
   <script src="script.js"></script>
