--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <h2 id="rgb-color"></h2>
   <ul id="paleta-de-cores"></ul>
   <h2 id="answer">Escolha uma cor</h2>
-
+  <button id="reset-game">RESET</button>
 
   <script src="script.js"></script>
 </body>
