--- a/index.html
+++ b/index.html
@@ -11,11 +11,17 @@
   <header>
     <h1 id="title">Adivinha Cor</h1>
   </header>
-  <h2 id="rgb-color"></h2>
-  <ul id="paleta-de-cores"></ul>
+  <div id="rgb">
+    <h2>R  G  B</h2>
+    <h2 id="rgb-color"></h2>
+  </div>
+  <div id="cores">
+    <ul id="paleta-de-cores"></ul>
+  </div>
   <h2 id="answer">Escolha uma cor</h2>
-  <button id="reset-game">RESET</button>
-
+  <div id="botao">
+    <button id="reset-game">RESET</button>
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
