--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <h2>R  G  B</h2>
     <h2 id="rgb-color"></h2>
   </div>
+  <div id="placar">
+    <h2>Placar:</h2>
+    <h2 id="score">0</h2>
+  </div>
   <div id="cores">
     <ul id="paleta-de-cores"></ul>
   </div>
