adicionando a cor ao texto aleatorio

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <h1 id="title">Adivinhe a COR</h1>
-  <h2 id="rbg-color">(168, 34, 1)</h2>
+  <h2 id="rbg-color"></h2>
   <div class="contain-ball">
     <div class="ball"></div>
     <div class="ball"></div>
