--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
   <title>Document</title>
 </head>
 <body>
@@ -18,6 +18,7 @@
     <div class="ball"></div>
     <div class="ball"></div>
   </div>
+  <h2 id="answer"></h2>
   <script src="script.js"></script>
 </body>
 </html>
