--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <h1 id="title">Adivinhe a COR</h1>
-  <h2 id="rbg-color"></h2>
+  <h2 id="rgb-color"></h2>
   <div class="contain-ball">
     <div class="ball"></div>
     <div class="ball"></div>
@@ -19,6 +19,7 @@
     <div class="ball"></div>
   </div>
   <h2 id="answer"></h2>
+  <button id="reset-game">Jogar Novamente!</button>
   <script src="script.js"></script>
 </body>
 </html>
