--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
   <h1 id="title">Adivinhe a COR</h1>
   <h2 id="rgb-color"></h2>
+  <h4 id="score">Placar: 0</h4>
   <div class="contain-ball">
     <div class="ball"></div>
     <div class="ball"></div>
